--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -28,4 +28,5 @@ jobs:
         npm install mkdirp@latest
         npm install -D webpack -y
         npm install -D webpack-cli -y
+        npm install -D webpack-dev-server -y
         npx webpack serve
